# wrought

./: .gitignore  Cargo.toml  README.md
bugtrack/: 01-content-store.md  02-ai-integration.md  03-knowledge-base.md  04-file-history.md  05-dir-and-project-status.md  05-project-status.md  07-use-xfs-to-enable-tests.md  09-add-template-support.md  12-track-initially-installed-scripts.md  14-support-ai-tools.md  15-undummy-classes.md  16-directory-status.md  17-wrought-update.md  18-wasm-multifunction.md  19-dogfood-for-novel-gen.md  21_configuration_options_for_llm.md  22_add_json_io_to_lua.md  _template.md
bugtrack/complete/: 01-content-store.md  02-ai-integration.md  04-file-history.md  05-project-status.md  07-use-xfs-to-enable-tests.md  09-add-template-support.md  10-support-wasm-plugins.md  13-mock-or-inmemory-event-log.md  15-undummy-classes.md
example-wasm-script/: Cargo.toml  README.md
example-wasm-script/src/: lib.rs
src/: backend.rs  binary16.rs  bridge.rs  content_store.rs  event_log.rs  events.rs  file_history.rs  fs_utils.rs  llm.rs  main.rs  metadata.rs  project_status.rs  scripting_luau.rs
test_scripts/: create_then_show_and_history.sh  create_then_status.sh  simple_ai_test.sh
wasmcb/: Cargo.toml
wasmcb/src/: lib.rs
wrought/: Cargo.toml  build_db.sql
wrought-wasm-bindings/: Cargo.toml
wrought-wasm-bindings/src/: lib.rs
wrought/src/: backend.rs  binary16.rs  bridge.rs  content_store.rs  event_log.rs  events.rs  file_history.rs  llm.rs  luau_json.rs  main.rs  scripting_luau.rs  scripting_wasm.rs
wrought/test_scripts/: create_then_status.sh  luau_scripts.sh  wasm_scripts.sh
