[package]
name = "wrought"
version = "0.1.0"
edition = "2021"

[dependencies]
xfs = { path = "../inscenerator-rs/xfs" }
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
digest = "0.10.7"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
mlua = { version = "0.9.9", features = ["luau"] }
rust_openai = { path = "../rust_openai"}
